Epylog-0.9.6
	* Small bugfix in repeated line lookup routines
	* Switched xml handling code from pyxml to libxml2
	* Added pam_krb5 handling for logins module

Epylog-0.9.5
	* Fix for quasi-bug #6 (docstrings added)
	* Fix for bug #57
	* Fix for bug #53
	* Cron mode of operation added -- checks for a lockfile (bug #79)
	
Epylog-0.9.4
	* Fix for bug #38 (incorrect offsets were causing backtrace)
	* Normalized logger calls (bug #9)
	* Enhancements to mail and packets modules

Epylog-0.9.3
	* Autoconf now used to configure and build epylog.
	* Mail module now supports qmail.
	* Additions to weed_dist rules
	* Perl module removed into a separate RPM package.

Epylog-0.9.2
	* Notices module reworked to support custom notifications.
	* Weeder module now supports 'ALL' for enable
	* Some changes to epylog core to return matched regex as part of 
	  linemap.

Epylog-0.9.1
	* Bugfixes for errors/warnings found by pychecker.
	* Added doc/INSTALL for those installing not from RPM.

Epylog-0.9.0
	* Killing old DULog-related changelog settings
	* Support for internal modules
	* Threading support
	* Rewrite of all modules in python
	* File Publisher support
	