@@ -2,6 +2,8 @@ Epylog-0.9.6
 	* Small bugfix in repeated line lookup routines
 	* Switched xml handling code from pyxml to libxml2
 	* Added pam_krb5 handling for logins module
+	* Added dovecot imap handling
+	* Added courier imap handling
 
 Epylog-0.9.5
 	* Fix for quasi-bug #6 (docstrings added)
